prodMetadata/src/objects/Corresponding_Bill__c.object
<CustomObject>
    <fields>
        <fullName>Bill1_Title__c</fullName>
        <formula>text(Legislation1__r.Bill_Prefix__c) +  text(Legislation1__r.Bill_Number__c) + &quot;: &quot; + if(isblank(Legislation1__r.AKA__c ), Legislation1__r.Bill_Title__c, Legislation1__r.AKA__c )</formula>
        <label>Bill1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill2_Title__c</fullName>
        <formula>text(Legislation2__r.Bill_Prefix__c) +  text(Legislation2__r.Bill_Number__c) + &quot;: &quot; + if(isblank(Legislation2__r.AKA__c ), Legislation2__r.Bill_Title__c, Legislation2__r.AKA__c )</formula>
        <label>Bill2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legislation1__c</fullName>
        <label>Legislation1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Legislation__c.Legislative_Body__c</field>
                <operation>notEqual</operation>
                <valueField>Legislation__c.Legislative_Body__c</valueField>
            </filterItems>
            <filterItems>
                <field>Legislation__c.Legislative_Body__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Corresponding Bills 1</relationshipLabel>
        <relationshipName>Corresponding_Bill</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legislation2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legislation2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Legislation__c.Legislative_Body__c</field>
                <operation>notEqual</operation>
                <valueField>Legislation__c.Legislative_Body__c</valueField>
            </filterItems>
            <filterItems>
                <field>Legislation__c.Congressional_Session__c</field>
                <operation>equals</operation>
                <valueField>Legislation__c.Congressional_Session__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Corresponding Bills 2</relationshipLabel>
        <relationshipName>Corresponding_Bill2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Corresponding Bill</label>
    <nameField>
        <displayFormat>CorrLeg-{00000}</displayFormat>
        <label>Corresponding Bill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corresponding Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>